Bug fixes from FindBugs.